--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   equatable: ^2.0.5
   bloc: ^8.1.3
   flutter_bloc: ^8.1.4
+  firebase_core: ^2.27.0
+  cloud_firestore: ^4.15.8
+
+  db_client: 
+    path: modules/db_client
 
 dev_dependencies:
   flutter_test:
